Geo.js mis à jour

--- a/Core-master/assets/style.css
+++ b/Core-master/assets/style.css
@@ -48,3 +48,9 @@ p {
 input {
     margin-left: auto;
 }
+
+#carte{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
