--- a/Core-master/assets/css/accueil.css
+++ b/Core-master/assets/css/accueil.css
@@ -1,13 +1,8 @@
 body {
-    background-color: lightgreen;
-    font-family: "Parkinsans", serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-size: 1em;
-    font-style: normal;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
 }
 
 h1 {
@@ -59,6 +54,11 @@ table {
     color: rgb(54, 49, 47);
     font-weight: 600;
     font-size-adjust: 1;
+}
+
+#DemButton {
+    font-weight: 600;
+    font-size-adjust: 2;
 }
 
 
